Project

General

Profile

Actions

Bug #41394

closed

[migration] using abort can result in the loss of data

Added by Jason Dillaman over 4 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If the migration destination image has been written against, running "rbd migration abort" will not copy the new data back to the source image. If it's not feasible to support a live-migrate abort, force it to be an offline process.


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #47099: octopus: [migration] using abort can result in the loss of dataResolvedJason DillamanActions
Copied to rbd - Backport #47100: nautilus: [migration] using abort can result in the loss of dataResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman over 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
  • Backport changed from nautilus to nautilus,octopus
Actions #2

Updated by Jason Dillaman over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 36471
Actions #3

Updated by Mykola Golub over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47099: octopus: [migration] using abort can result in the loss of data added
Actions #5

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47100: nautilus: [migration] using abort can result in the loss of data added
Actions #6

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF