librbd: migration abort should revert data back to the original image

If the migration destination image was modified and then the migration
was aborted, we need to copy the data back to the source image to avoid
losing data. For simplicity we will only revert the HEAD revision state
and will not attempt to copy new snapshots on the destination image
back to the source.

Fixes: https://tracker.ceph.com/issues/41394
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit 5bd15da8be09a4e7644d411a0b0c132e5b795393)

Conflicts:
	src/librbd/api/Migration.cc: trivial resolution
(cherry picked from commit f94c276accb8c9f4096b3bffc95362a921f2a2a5)

Conflicts:
        src/librbd/api/Migration.cc: snapshot-based mirroring changes